--- a/index.html
+++ b/index.html
@@ -1,64 +1,49 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Exemplo de Site com Fotos</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Site Exemplo</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Cabeçalho -->
+    <header>
+        <div class="container">
+            <h1>Meu Site Exemplo</h1>
+            <nav>
+                <ul>
+                    <li><a href="#home">Início</a></li>
+                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="#contato">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-  <!-- Cabeçalho -->
-  <header>
-    <div class="logo">
-      <h1>Meu Site</h1>
-    </div>
-    <nav>
-      <ul class="menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Sobre</a></li>
-        <li class="dropdown">
-          <a href="#">Serviços</a>
-          <ul class="dropdown-content">
-            <li><a href="#">Serviço 1</a></li>
-            <li><a href="#">Serviço 2</a></li>
-            <li><a href="#">Serviço 3</a></li>
-          </ul>
-        </li>
-        <li><a href="#">Contato</a></li>
-      </ul>
-    </nav>
-  </header>
+    <!-- Conteúdo Principal -->
+    <main>
+        <section id="home">
+            <h2>Bem-vindo ao meu site!</h2>
+            <p>Este é um site de exemplo com cabeçalho e rodapé.</p>
+        </section>
 
-  <!-- Espaço para texto e imagens -->
-  <section class="content">
-    <h2>Bem-vindo ao meu site!</h2>
-    <p>Este é um exemplo de página com cabeçalho, menu em cascata, rodapé, e espaço para imagens.</p>
-    
-    <!-- Espaço para fotos -->
-    <div class="photo-gallery">
-      <div class="photo-item">
-        <img src="https://via.placeholder.com/300" alt="Foto 1">
-        <p>Legenda da Foto 1</p>
-      </div>
-      <div class="photo-item">
-        <img src="https://via.placeholder.com/300" alt="Foto 2">
-        <p>Legenda da Foto 2</p>
-      </div>
-      <div class="photo-item">
-        <img src="https://via.placeholder.com/300" alt="Foto 3">
-        <p>Legenda da Foto 3</p>
-      </div>
-    </div>
-  </section>
+        <section id="sobre">
+            <h2>Sobre o Site</h2>
+            <p>Este site foi criado como exemplo de uma estrutura simples de HTML e CSS.</p>
+        </section>
 
-  <!-- Seta para voltar ao topo -->
-  <a href="#top" class="scroll-to-top">&#8679;</a>
+        <section id="contato">
+            <h2>Contato</h2>
+            <p>Você pode entrar em contato comigo através do e-mail: exemplo@dominio.com</p>
+        </section>
+    </main>
 
-  <!-- Rodapé -->
-  <footer>
-    <p>&copy; Site feito por Ágata, Eduardo B., Istalisson. Todos os direitos reservados.</p>
-  </footer>
-
+    <!-- Rodapé -->
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Meu Site. Todos os direitos reservados.</p>
+        </div>
+    </footer>
 </body>
 </html>
